--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,9 @@ services:
     region: oregon
     plan: free
     runtime: python
-    buildCommand: ""
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
+    pythonVersion: 3.9
     envVars:
       - key: APNS_TEAM_ID
         value: your_team_id_here
